force-app/main/default/objects/Partner_Onboarding_Request__c/Partner_Onboarding_Request__c.object-meta.xml
<CustomObject>
    <description>This object is used to track all Partner Onboarding Requests</description>
    <label>Partner Onboarding Request</label>
    <nameField>
        <displayFormat>Onboarding Request-{0000000}</displayFormat>
        <label>Partner Onboarding Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Onboarding Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>