force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>selected Account&apos;s record type must be &apos;Partner/Distributor&apos;</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Partner_Distributor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Onboarding Request (Account)</relationshipLabel>
    <relationshipName>Partner_Onboarding_Request1</relationshipName>
    <type>Lookup</type>
</CustomField>