force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <label>Additional Comments</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>