force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <description>This field is to capture address 1 from partner</description>
    <label>Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>