force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <description>This field is to capture Address 2 for Partner</description>
    <label>Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>