force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Agreed_Term_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Term_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreed Term &amp; Conditions</label>
    <type>Checkbox</type>
</CustomField>