force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>This field is to capture company Name of Parner</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>