force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Contract_Generation__c.field-meta.xml
<CustomField>
    <fullName>Contract_Generation__c</fullName>
    <description>Contract generation was successful/unsuccessful</description>
    <label>Contract Generation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>