force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <label>Credit Limit</label>
    <type>TextArea</type>
</CustomField>