force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <label>Distributor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADN</fullName>
            </value>
            <value>
                <fullName>Arrow ECS</fullName>
            </value>
            <value>
                <fullName>Arrow ECS Finland Oy</fullName>
            </value>
            <value>
                <fullName>Arrow ECS Italy</fullName>
            </value>
            <value>
                <fullName>Arrow ECS Netherlands</fullName>
            </value>
            <value>
                <fullName>Arrow ECS Norway AS</fullName>
            </value>
            <value>
                <fullName>Arrow ECS Sweden</fullName>
            </value>
            <value>
                <fullName>Clico</fullName>
            </value>
            <value>
                <fullName>Cloud Harmonics</fullName>
            </value>
            <value>
                <fullName>Commtech</fullName>
            </value>
            <value>
                <fullName>Computer Gross Italia SpA</fullName>
            </value>
            <value>
                <fullName>ECS Pericomp Sdn. Bhd</fullName>
            </value>
            <value>
                <fullName>ECS Singapore</fullName>
            </value>
            <value>
                <fullName>ECS Thailand</fullName>
            </value>
            <value>
                <fullName>Evanssion FZCO</fullName>
            </value>
            <value>
                <fullName>Exclusive Networks (Australia)</fullName>
            </value>
            <value>
                <fullName>Exclusive Networks (Austria)</fullName>
            </value>
            <value>
                <fullName>Exclusive Networks (Belgium)</fullName>
            </value>
            <value>
                <fullName>Exclusive Networks (Denmark)</fullName>
            </value>
            <value>
                <fullName>Exclusive Networks (Finland)</fullName>
            </value>
            <value>
                <fullName>Exclusive Networks (Germany)</fullName>
            </value>
            <value>
                <fullName>Exclusive Networks (India)</fullName>
            </value>
            <value>
                <fullName>Exclusive Networks (Indonesia)</fullName>
            </value>
            <value>
                <fullName>Exclusive Networks (Ireland)</fullName>
            </value>
            <value>
                <fullName>Exclusive Networks (Italy)</fullName>
            </value>
            <value>
                <fullName>Exclusive Networks (Malaysia)</fullName>
            </value>
            <value>
                <fullName>Exclusive Networks (Middle East)</fullName>
            </value>
            <value>
                <fullName>Exclusive Networks (Netherlands)</fullName>
            </value>
            <value>
                <fullName>Exclusive Networks (New Zealand)</fullName>
            </value>
            <value>
                <fullName>Exclusive Networks (Norway)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>