force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Distributor_Account__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Onboarding Request</relationshipLabel>
    <relationshipName>Partner_Onboarding_Request</relationshipName>
    <type>Lookup</type>
</CustomField>