force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Employed_by_Gov_Entity__c.field-meta.xml
<CustomField>
    <fullName>Employed_by_Gov_Entity__c</fullName>
    <description>ITMKT21-9: Is any owner, officer, or director of your company currently employed by a government entity (including public and state-owned entities) or have they been employed by a government entity within the past three years?</description>
    <label>Employed by Gov Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>