force-app/main/default/objects/Partner_Onboarding_Request__c/fields/FAQ1_answer__c.field-meta.xml
<CustomField>
    <fullName>FAQ1_answer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FAQ1_answer</label>
    <type>Checkbox</type>
</CustomField>