force-app/main/default/objects/Partner_Onboarding_Request__c/fields/FAQ1_Comments__c.field-meta.xml
<CustomField>
    <fullName>FAQ1_Comments__c</fullName>
    <inlineHelpText>Does your company have FCPA or anti-bribery compliance policies and procedures, or else a Code of Conduct that addresses these issues?  If so, please confirm that these policies and procedures address the U.S. FCPA and the UK Bribery Act.</inlineHelpText>
    <label>FAQ1_Comments</label>
    <type>TextArea</type>
</CustomField>