force-app/main/default/objects/Partner_Onboarding_Request__c/fields/FAQ2_answer__c.field-meta.xml
<CustomField>
    <fullName>FAQ2_answer__c</fullName>
    <label>FAQ2_answer</label>
    <type>TextArea</type>
</CustomField>