force-app/main/default/objects/Partner_Onboarding_Request__c/fields/FAQ2_Response__c.field-meta.xml
<CustomField>
    <fullName>FAQ2_Response__c</fullName>
    <description>Has your company made any payments, gifts, hospitality (e.g., meals, lodging, travel), to any government official or candidate for public office, or any contributions or donations to any political parties, candidates for public office or government agencies in the past five years?  If so, please describe.</description>
    <inlineHelpText>Has your company made any payments, gifts, hospitality(e.g. meals, lodging, travel), to any government official or candidate for public office, or any contributions or donations to any political parties, candidates for public office or government agencies</inlineHelpText>
    <label>FAQ2_Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>