force-app/main/default/objects/Partner_Onboarding_Request__c/fields/FAQ3_answer__c.field-meta.xml
<CustomField>
    <fullName>FAQ3_answer__c</fullName>
    <label>FAQ3_answer</label>
    <type>TextArea</type>
</CustomField>