force-app/main/default/objects/Partner_Onboarding_Request__c/fields/FAQ3_Response__c.field-meta.xml
<CustomField>
    <fullName>FAQ3_Response__c</fullName>
    <inlineHelpText>Is any owner, officer, or director of your company currently a government official or have they been a government official within the past three years?  If yes, please describe.</inlineHelpText>
    <label>FAQ3_Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>