force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Financials_received__c.field-meta.xml
<CustomField>
    <fullName>Financials_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financials received</label>
    <type>Checkbox</type>
</CustomField>