force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Focus_of_your_Business__c.field-meta.xml
<CustomField>
    <fullName>Focus_of_your_Business__c</fullName>
    <label>Focus of your Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Servers</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Cloud Solutions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>