force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Inside_Sales__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales__c</fullName>
    <label>Inside Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>