force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Interest_in_becoming_a_Rubrik_Partner__c.field-meta.xml
<CustomField>
    <fullName>Interest_in_becoming_a_Rubrik_Partner__c</fullName>
    <label>Interest in becoming a Rubrik Partner</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>