force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Master_Terms__c.field-meta.xml
<CustomField>
    <fullName>Master_Terms__c</fullName>
    <label>ClickThroughContract-Master</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>