force-app/main/default/objects/Partner_Onboarding_Request__c/fields/MSP_Approver__c.field-meta.xml
<CustomField>
    <fullName>MSP_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSP Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Onboarding_Request</relationshipName>
    <type>Lookup</type>
</CustomField>