force-app/main/default/objects/Partner_Onboarding_Request__c/fields/MSP_Helptext__c.field-meta.xml
<CustomField>
    <fullName>MSP_Helptext__c</fullName>
    <defaultValue>$Label.SDP_Helptext</defaultValue>
    <label>MSP Helptext</label>
    <type>TextArea</type>
</CustomField>