force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Other_Focus_of_your_Business__c.field-meta.xml
<CustomField>
    <fullName>Other_Focus_of_your_Business__c</fullName>
    <label>Other Focus of your Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>