force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Other_Vendors_you_work_with_today__c.field-meta.xml
<CustomField>
    <fullName>Other_Vendors_you_work_with_today__c</fullName>
    <label>Other Vendors you work with today</label>
    <length>255</length>
    <type>Text</type>
</CustomField>