force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Outside_Sales__c.field-meta.xml
<CustomField>
    <fullName>Outside_Sales__c</fullName>
    <label>Outside Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>