force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Partner_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Onboarding_Status__c</fullName>
    <label>Partner Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>L1 Approved</fullName>
            </value>
            <value>
                <fullName>L2 Approved</fullName>
            </value>
            <value>
                <fullName>L3 Approved</fullName>
            </value>
            <value>
                <fullName>L4 Approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>L5 Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>