force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Partner_Selling_Countries__c.field-meta.xml
<CustomField>
    <fullName>Partner_Selling_Countries__c</fullName>
    <description>Please list the countries where you plan to sell Rubrik’s products.</description>
    <label>Partner Selling Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>