force-app/main/default/objects/Partner_Onboarding_Request__c/fields/PartnerType__c.field-meta.xml
<CustomField>
    <fullName>PartnerType__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
                <label>Managed Service Providers (MSP)</label>
            </value>
            <value>
                <fullName>MSP-Reseller</fullName>
            </value>
            <value>
                <fullName>Alliance Partner</fullName>
                <label>Technology Alliance Partner (TAP)</label>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>