force-app/main/default/objects/Partner_Onboarding_Request__c/fields/PatchManager__c.field-meta.xml
<CustomField>
    <fullName>PatchManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PatchManager</label>
    <referenceTo>PatchManager__c</referenceTo>
    <relationshipLabel>Partner Onboarding Request</relationshipLabel>
    <relationshipName>Partner_Onboarding_Request</relationshipName>
    <type>Lookup</type>
</CustomField>