force-app/main/default/objects/Partner_Onboarding_Request__c/fields/PatchManager_s_Area__c.field-meta.xml
<CustomField>
    <fullName>PatchManager_s_Area__c</fullName>
    <formula>TEXT(PatchManager__r.TLevel2__c)</formula>
    <label>PatchManager&apos;s Area</label>
    <type>Text</type>
</CustomField>