force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Providing_Software_As_Service_Solution__c.field-meta.xml
<CustomField>
    <fullName>Providing_Software_As_Service_Solution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Providing software as-a-service solution</label>
    <type>Checkbox</type>
</CustomField>