force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <label>Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rubrik Employee</fullName>
            </value>
            <value>
                <fullName>Rubrik Distributor</fullName>
            </value>
            <value>
                <fullName>Rubrik Alliance Partner</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Test 1</fullName>
                <isActive>false</isActive>
                <label>Test 1</label>
            </value>
            <value>
                <fullName>Test 2</fullName>
                <isActive>false</isActive>
                <label>Test 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>