force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New England</fullName>
            </value>
            <value>
                <fullName>NY NJ</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>North Central</fullName>
            </value>
            <value>
                <fullName>TOLA</fullName>
            </value>
            <value>
                <fullName>Mid Atlantic</fullName>
            </value>
            <value>
                <fullName>Eastern Canada</fullName>
            </value>
            <value>
                <fullName>Western Canada</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Northern Australia</fullName>
            </value>
            <value>
                <fullName>Southern Australia</fullName>
            </value>
            <value>
                <fullName>Philippines</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>NEUR</fullName>
            </value>
            <value>
                <fullName>CEUR</fullName>
            </value>
            <value>
                <fullName>SEUR</fullName>
            </value>
            <value>
                <fullName>WEUR</fullName>
            </value>
            <value>
                <fullName>Russia &amp; CIS</fullName>
            </value>
            <value>
                <fullName>Carolina TN</fullName>
            </value>
            <value>
                <fullName>Pacific Northwest</fullName>
            </value>
            <value>
                <fullName>Northern California</fullName>
            </value>
            <value>
                <fullName>Desert/Rockies</fullName>
            </value>
            <value>
                <fullName>Southern California</fullName>
            </value>
            <value>
                <fullName>Taiwan</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>Greater China</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>