force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Comments__c</fullName>
    <label>Rejection Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>