force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Reselling_technology_to_customers__c.field-meta.xml
<CustomField>
    <fullName>Reselling_technology_to_customers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reselling technology to customers</label>
    <type>Checkbox</type>
</CustomField>