force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Rubrik_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Rubrik_Relationship__c</fullName>
    <label>Rubrik Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>