force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Sales_Area__c.field-meta.xml
<CustomField>
    <fullName>Sales_Area__c</fullName>
    <label>Sales Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test 1</fullName>
            </value>
            <value>
                <fullName>Test 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>