force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Sales_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contact_Email__c</fullName>
    <label>Sales Contact Email Address</label>
    <type>Email</type>
</CustomField>