force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Sales_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contact_Phone__c</fullName>
    <label>Sales Contact Phone Number</label>
    <type>Phone</type>
</CustomField>