force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Sales_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contact_Title__c</fullName>
    <label>Sales Contact Job Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>