force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Sales_Point_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Point_Contact_Type__c</fullName>
    <label>Sales Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>