force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Same_as_Partner_Portal_Admin_Technical__c.field-meta.xml
<CustomField>
    <fullName>Same_as_Partner_Portal_Admin_Technical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used on Partner form to fill technical contact details.</description>
    <label>Same as Partner Portal Admin Technical</label>
    <type>Checkbox</type>
</CustomField>