force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Same_As_Portal_Admin__c.field-meta.xml
<CustomField>
    <fullName>Same_As_Portal_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same as Partner Portal Admin</label>
    <type>Checkbox</type>
</CustomField>