force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Same_As_Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>Same_As_Sales_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same as Sales Point of Contact</label>
    <type>Checkbox</type>
</CustomField>