force-app/main/default/objects/Partner_Onboarding_Request__c/fields/SDP_Selling_Type__c.field-meta.xml
<CustomField>
    <fullName>SDP_Selling_Type__c</fullName>
    <label>SDP Selling Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keep Title</fullName>
            </value>
            <value>
                <fullName>Transfer Title</fullName>
            </value>
            <value>
                <fullName>Consumption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>