force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Secondary_Terms__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Terms__c</fullName>
    <label>ClickThroughContract-Secondary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>