force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Sell_to_Gov_Entities__c.field-meta.xml
<CustomField>
    <fullName>Sell_to_Gov_Entities__c</fullName>
    <description>ITMKT21-9: Does your company do business with or sell to government entities (including public and state-owned entities)?</description>
    <label>Sell to Gov Entities</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>