force-app/main/default/objects/Partner_Onboarding_Request__c/fields/StateProvince__c.field-meta.xml
<CustomField>
    <fullName>StateProvince__c</fullName>
    <label>State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>State_Province</valueSetName>
    </valueSet>
</CustomField>