force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Tax_Certificates_received__c.field-meta.xml
<CustomField>
    <fullName>Tax_Certificates_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Certificates received</label>
    <type>Checkbox</type>
</CustomField>