force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Technical_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact_Phone__c</fullName>
    <label>Technical Contact Phone Number</label>
    <type>Phone</type>
</CustomField>