force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Technical_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact_Title__c</fullName>
    <label>Technical Contact Job Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>