force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Technical_Sales__c.field-meta.xml
<CustomField>
    <fullName>Technical_Sales__c</fullName>
    <label>Technical Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>